--- a/packer_aws_ansible_autoscale/roles/rolling_autoscale_update/tasks/main.yml
+++ b/packer_aws_ansible_autoscale/roles/rolling_autoscale_update/tasks/main.yml
@@ -10,13 +10,29 @@
         load_balancer_port: 80
         instance_port: 80
 
+- name: create a security group to open ports 80 and 22
+  ec2_group:
+    name: "{{ security_group_name }}"
+    description: "{{ security_group_description }}"
+    vpc_id: "{{ vpc_id }}"
+    region: "{{ region }}"
+    rules:
+      - proto: tcp
+        from_port: 80
+        to_port: 80
+        cidr_ip: 0.0.0.0/0
+      - proto: tcp
+        from_port: 22
+        to_port: 22
+        cidr_ip: 0.0.0.0/0
+
 - name: create a launch configuration
   ec2_lc:
     name: "{{ launch_configuration_name }}"
     image_id: "{{ ami_id }}"
     key_name: "{{ key_name }}"
     region: "{{ region }}"
-    security_groups: "{{ security_group_id }}"
+    security_groups: "{{ security_group_name }}"
     instance_type: "{{ instance_type }}"
 
 - name: create or modify an existing autoscaling group
@@ -24,7 +40,7 @@
     name: "{{ auto_scale_group_name }}"
     launch_config_name: "{{ launch_configuration_name }}"
     health_check_period: 60
-    health_check_type: ELB
+    health_check_type: "ELB"
     replace_all_instances: yes
     min_size: "{{ auto_scale_group_min_size }}"
     max_size: "{{ auto_scale_group_max_size }}"
